name:     dicomh
version:  0.0.1
cabal-version: >=1.6
build-type: Simple
author:   James d'Arcy
maintainer: james.darcy@wraithbane.com
license:  BSD3
license-file: LICENSE
copyright: 2010 James d'Arcy
category: Data
synopsis: Library to read DICOM medical images
description: Library to read DICOM medical images. http://medical.nema.org

library
  build-depends:   base >= 4 && < 5, containers >= 0.3, binary-strict >= 0.4.8,
                   bytestring >= 0.9.1, filepath >= 1.1, pretty >= 1, directory >= 1
  hs-source-dirs:  src
  exposed-modules: Data.Dicom, Data.Dicom.Dictionary, Data.Dicom.Io, Data.Dicom.Show, Data.Dicom.UID,
                   Data.Dicom.Tag, Data.Dicom.Accessor, Data.Dicom.Jpeg2000

executable dicomh
  hs-source-dirs:  src
  main-is:         Main.hs

